--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "gh-pages": "^6.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-responsive": "^10.0.0"
   },
   "devDependencies": {
     "prettier": "^2.8.8"
@@ -34,7 +35,7 @@
   "scripts": {
     "deploy": "gatsby build && gh-pages -d public -b main",
     "build": "gatsby build",
-    "develop": "gatsby develop",
+    "develop": "gatsby develop --host 0.0.0.0",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md,css}\"",
     "start": "gatsby develop",
     "serve": "gatsby serve",
@@ -49,4 +50,3 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   }
 }
-
