--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "saikiacodes-portfolio",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "A portfolio site hosted on Github by Ankit Saikia",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Ankit Saikia <saikiacodes@gmail.com>",
   "dependencies": {
     "@svgr/webpack": "^8.1.0",
     "bootstrap": "^5.3.3",
@@ -12,6 +12,7 @@
     "gatsby-plugin-github-pages": "^1.0.1",
     "gatsby-plugin-image": "^3.14.0",
     "gatsby-plugin-manifest": "^5.14.0",
+    "gatsby-plugin-sass": "^6.14.0",
     "gatsby-plugin-sharp": "^5.14.0",
     "gatsby-plugin-sitemap": "^6.14.0",
     "gatsby-plugin-svgr": "^3.0.0-beta.0",
@@ -23,7 +24,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
-    "react-responsive": "^10.0.0"
+    "react-responsive": "^10.0.0",
+    "sass": "^1.83.0"
   },
   "devDependencies": {
     "prettier": "^2.8.8"
@@ -44,9 +46,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Saikiasan/saikiasan.github.io.git"
+    "url": "git+https://github.com/Saikiasan/saikiasan.github.io.git"
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
-  }
+  },
+  "main": "gatsby-browser.js",
+  "homepage": "https://github.com/Saikiasan/saikiasan.github.io#readme"
 }
